# zero_to_prod

./: .gitignore  .taplo.toml  Cargo.toml  Dockerfile  configuration.yml  spec.yml
.github/workflows/: general.yml
configuration/: base.yml  production.yml
migrations/: 20220701184220_create_subscription_table.sql  20220701191509_create_subscription_table.sql  20220804141433_add_status_to_subscriptions.sql  20220804142856_make_status_not_null_in_subscriptions.sql  20220804143412_create_subscription_tokens_table.sql  20220816114853_create_users_table.sql  20220816123448_rename_password_column.sql  20220816174145_add_salt_to_users.sql  20220816180236_remove_salt_from_users.sql
scripts/: init_db.sh
src/: configuration.rs  domain.rs  email_client.rs  lib.rs  main.rs  startup.rs  telemetry.rs
src/domain/: subscriber_email.rs  subscriber_name.rs
src/routes/: newsletters.rs  subscriptions.rs  subscriptions_confirm.rs
src/routes/home/: home.html
tests/: health_check.rs
tests/api/: health_check.rs  helpers.rs  newsletter.rs  subscriptions.rs  subscriptions_confirm.rs
