[package]
name = "zero_to_prod"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero_to_prod"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
config = "0.11"
serde = { version = "1", features = ["derive"] }
sqlx = { version = "0.5.7", features = [
  "macros",               # gives us sqlx::query! and sqlx::query_as!
  "chrono",               # support for mapping sql timestamptz to DateTime<T> from chrono crate
  "runtime-actix-rustls", # use actix as runtime for futures and rustls as TLS backend
  "postgres",             # gives unique postgres functionality
  "uuid",                 # allows mapping sql uuids to the Uuid type from uuid crate
  "migrate",              # same functionality as sqlx-cli for managing migrations -> useful for tests
], default-features = false }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }

[dev-dependencies]
reqwest = "0.11"
